--- a/docs/vitaskär/_toc.yml
+++ b/docs/vitaskär/_toc.yml
@@ -1,9 +1,10 @@
 # Table of contents
 # Learn more at https://jupyterbook.org/customize/toc.html
 
-format: jb-book
-root: 01.01_introduction
-chapters:
+format: jb-article
+root: index
+sections:
+- file: 01.01_introduction
 - file: 02.01_method
 - file: 02.10_data
 - file: 03.01_results
