--- a/docs/ventrafiken/_config.yml
+++ b/docs/ventrafiken/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: Energy saving Ventrafiken
+title: Energy efficiency Uraniborg
 author: D2E2F
 logo: logo.png
 
@@ -13,7 +13,8 @@ execute:
 # Define the name of the latex output file for PDF builds
 latex:
   latex_documents:
-    targetname:  Energy saving Ventrafiken.tex
+    targetname:  uraniborg.tex
+  latex_engine: xelatex
 
 # Add a bibtex file so that we can create citations
 bibtex_bibfiles:
@@ -30,3 +31,20 @@ repository:
 html:
   use_issues_button: true
   use_repository_button: true
+
+sphinx:
+  extra_extensions:
+    #- sphinx_jupyterbook_latex
+  config:
+    latex_elements:
+      fontpkg: \usepackage{lmodern}          % better font
+      pointsize: 12pt
+      extrapackages: \usepackage{placeins}     % for FloatBarrier 
+
+  nb_mime_priority_overrides:
+    - - latex
+      - "image/svg+xml"
+      - 15
+    - - latex
+      - "image/pdf"
+      - 16
