--- a/docs/ventrafiken/_toc.yml
+++ b/docs/ventrafiken/_toc.yml
@@ -1,8 +1,12 @@
 # Table of contents
 # Learn more at https://jupyterbook.org/customize/toc.html
 
-format: jb-book
-root: intro
-chapters:
-- file: 07.04_uraniborg_savings
+format: jb-article
+root: index
+sections:
+- file: 01.00_setup
+- file: 01.01_introduction
+- file: 02.01_method
+- file: 02.10_data
+- file: 03.01_results
 - file: summary
